--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Online Courier Services",
+  "name": "online_courier_services",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
